--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 max-line-length = 89
 exclude = */migrations/*,htmlcov,docs,dist,build,ci,__pycache__,.tox,.pytest_cache,.git,.eggs
+ignore: W605,E501,W503
 
 [metadata]
 description-file = README.rst
